feat: add chapters public API
